# nrf-agps

./: .gitignore  Makefile  README.md  almanac.h  codegen.c  gps_assist.h  gps_assist_nrf.c  gps_assist_nrf.h  main.c  meson.build  phpstan.neon  rinex.c  sqlitedb.c  sqlitedb.h  supl_codec.c  supl_codec.h  supl_main.c  supl_server.c  supl_server.h
.github/workflows/: ci.yml
asn1/: Makefile  generate.sh  meson.build
doc/: offline-agps-ttff-analysis.md
lib/: almanac.c  codegen.c  codegen.h  gps_assist.h  gps_assist_nrf.c  gps_assist_nrf.h  lpp_builder.c  lpp_builder.h  meson.build  pplog.h  rinex.c  rinex.h  sqlitedb.c  sqlitedb.h
php/: agnss.php  composer.json  index.php  nrf_cloud.php  phpstan.neon
rinex_dl/: meson.build  rinex_main.c
supl/: meson.build  supl_main.c  supl_server.c
tests/: compare_supl_json.py  gen_nrf_cloud_binary.php  meson.build  nrf_modem_gnss.h  supl_client.c  test_almanac.c  test_lpp.c  test_nrf_cloud.php  test_nrf_cloud_cross.c  test_nrf_convert.c  test_php_api.php  test_rinex.c  test_sqlitedb.c  test_supl_compare.sh
