lib_inc = include_directories('.')

lib_rinex_sources = files(
  'rinex.c',
  'codegen.c',
  'almanac.c',
  'sqlitedb.c',
)

lib_supl_sources = files(
  'supl_codec.c',
  'lpp_builder.c',
  'sqlitedb.c',
)

lib_lpp_builder_sources = files(
  'lpp_builder.c',
)

lib_nrf_sources = files(
  'gps_assist_nrf.c',
)
